# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package]
name = "bevy-example"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.11.2"

# ------------------------------------------------------------------------------
# Use recommended dev profile compiler optimisations.
# https://bevyengine.org/learn/book/getting-started/setup/#compile-with-performance-optimizations

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3
# ------------------------------------------------------------------------------
